--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "web-dev-server --node-resolve --watch --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf public && mkdir public && cp assets css index.html public/"
   },
   "author": "",
   "license": "ISC",
